# moderncpp

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: build.yml  docs.yml
cmake/: FindAsio.cmake  FindConcepts.cmake  FindExecution.cmake  FindPMR.cmake  functions.cmake
cmake-functions/project-flags/: index.html
cmake-functions/qt-helpers/: index.html
cmake-functions/sanitizers/: index.html
cmake-functions/target-options/: index.html
cmake/functions/: project_flags.cmake  qt_helpers.cmake  sanitizers.cmake  target_options.cmake
contributors/: index.html
docs/: _config.yml  contributors.md  index.md  installing-c20.md  linux.md  mac-os.md  macros.py  quickstart.md  windows.md
docs/cmake-functions/: project-flags.md  qt-helpers.md  sanitizers.md  target-options.md
docs/guis/: imgui.md  opengl-glfw.md  opengl-sdl.md  qt.md  system-tray.md  webview.md
docs/installing-cpp/: cling.md  cmake.md  compiler.md  ides.md  webassembly.md
docs/javascripts/: extra.js
docs/overrides/: main.html
docs/testing/: boostut.md  catch2.md  plots.md  source-location.md
docs/utilities/: lyra.md  regex.md
examples/: CMakeLists.txt
examples/algorithm/: CMakeLists.txt  algorithm.cpp  searching.cpp
examples/basic_types/: CMakeLists.txt  vector_matrix.cpp
examples/control_flow/: CMakeLists.txt  calculator.cpp
examples/data_structures/: CMakeLists.txt  graph_example.cpp
examples/datetime/: CMakeLists.txt  flushtime.cpp
examples/functions/: CMakeLists.txt  recursive_bench.cpp
examples/oop/: CMakeLists.txt  main.cpp  product.cpp  warehouse.cpp
faq/: index.html
get-involved/: index.html
guis/build-script/: index.html
guis/imgui/: index.html
guis/opengl--glfw/: index.html
guis/opengl--sdl/: index.html
guis/opengl-glfw/: index.html
guis/opengl-sdl/: index.html
guis/qt/: index.html
guis/system-tray/: index.html
guis/webview/: index.html
img/: banner.xcf
installing-c20/ides/: index.html
installing-c20/interpreter--cling/: index.html
installing-c20/linux--gcc/: index.html
installing-c20/mac-os--clang/: index.html
installing-c20/webassembly--emscripten/: index.html
installing-c20/windows--msvc/: index.html
installing-cpp/cling/: index.html
installing-cpp/cmake/: index.html
installing-cpp/compiler/: index.html
installing-cpp/ides/: index.html
installing-cpp/webassembly/: index.html
quick-start/how-this-repository-works/: index.html
quick-start/why-modern-c/: index.html
quickstart/: index.html
search/: search_index.json
snippets/: CMakeLists.txt
snippets/algorithm/: CMakeLists.txt  algorithms.cpp  ranges.cpp  searching.cpp  sorting.cpp
snippets/basic/: CMakeLists.txt  arrays.cpp  auto.cpp  conditional.cpp  constants.cpp  data_types.cpp  files.cpp  functions.cpp  lambda.cpp  loops.cpp  move.cpp  raw_arrays.cpp  raw_pointers.cpp  repeticao_arranjos.cpp  sequential.cpp  smart_pointers.cpp  strings.cpp  structured_binding.cpp  vectors.cpp
snippets/basic_types/: CMakeLists.txt  aggregate_initialization.cpp  arrays.cpp  move.cpp  raw_arrays.cpp  strings.cpp  struct.cpp  structured_binding.cpp  vectors.cpp
snippets/control_flow/: CMakeLists.txt  cin.cpp  conditional.cpp  format.cpp  loops.cpp  printing.cpp  repeticao_arranjos.cpp  scopes.cpp  sequential.cpp
snippets/data_structures/: CMakeLists.txt  any.cpp  associative_containers.cpp  bitset.cpp  container_adapters.cpp  memory_resource.cpp  memory_resources.cpp  optional.cpp  sequence_containers.cpp  sequential_containers.cpp  span.cpp  spatial_containers.cpp  tuples.cpp  variant.cpp
snippets/data_types/: CMakeLists.txt  aggregate_initialization.cpp  auto.cpp  constants.cpp  data_types.cpp  move.cpp  operators.cpp  raw_pointers.cpp  smart_pointers.cpp  strings.cpp  structured_binding.cpp
snippets/datetime/: CMakeLists.txt  clock.cpp  datetime.cpp
snippets/files/: CMakeLists.txt  files.cpp  filesystem.cpp
snippets/functions/: CMakeLists.txt  functions.cpp  lambda.cpp
snippets/gui/: CMakeLists.txt
snippets/gui/imgui/: CMakeLists.txt  imgui_hello.cpp
snippets/gui/opengl/: CMakeLists.txt  opengl_hello.cpp
snippets/gui/opengl/glfw/: CMakeLists.txt  opengl_hello.cpp
snippets/gui/opengl/sdl/: CMakeLists.txt  sdl_hello.cpp
snippets/gui/qt/: CMakeLists.txt  qt_hello.cpp  qt_hello_on_thread.cpp
snippets/gui/sdl/: CMakeLists.txt  sdl_hello.cpp
snippets/gui/tray/: CMakeLists.txt  tray_hello.cpp
snippets/gui/webview/: CMakeLists.txt  webview_hello.cpp
snippets/heterogeneous_types/: CMakeLists.txt  any.cpp  optional.cpp  tuples.cpp  variant.cpp
snippets/input_output/: CMakeLists.txt  cin.cpp  format.cpp  hello_world.cpp  iomanip.cpp  output.cpp  printing.cpp  tabulate.cpp
snippets/networking/: CMakeLists.txt  network.cpp  network_async.cpp
snippets/networking/server/: CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
snippets/paradigms/: CMakeLists.txt  CRTP.cpp  SFINAE.cpp  metaprogramming.cpp  polymorphism.cpp  polymorphism_cast.cpp  shared_from_this.cpp
snippets/parallel/: CMakeLists.txt  async_pools.cpp  executors.cpp  multithreading.cpp  policies.cpp  signals.cpp  timers.cpp
snippets/pointers/: CMakeLists.txt  address_operator.cpp  raw_pointers.cpp  references.cpp  smart_pointers.cpp
snippets/random/: CMakeLists.txt  pcg.cpp  random.cpp
snippets/templates/: CMakeLists.txt  concepts.cpp  metaprogramming.cpp  sfinae.cpp  template_alias.cpp  template_functions.cpp
snippets/tests/: CMakeLists.txt  plots.cpp  source_location.cpp  source_location.h  unit_tests_catch.cpp  unit_tests_ut.cpp
snippets/utilities/: CMakeLists.txt  async_pools.cpp  clock.cpp  filesystem.cpp  format.cpp  lyra_cli.cpp  multithreading.cpp  network.cpp  network_async.cpp  random.cpp  regex.cpp
testing/boostut/: index.html
testing/build-script/: index.html
(+195 files in other folders)
