add_subdirectory(control_flow)
add_subdirectory(data_types)
add_subdirectory(functions)
add_subdirectory(files)
add_subdirectory(templates)
add_subdirectory(algorithm)
add_subdirectory(data_structures)
add_subdirectory(paradigms)
add_subdirectory(utilities)
add_subdirectory(gui)
add_subdirectory(tests)