# Basics
add_subdirectory(control_flow)
add_subdirectory(input_output)
add_subdirectory(data_types)
add_subdirectory(basic_types)
add_subdirectory(pointers)
add_subdirectory(functions)
add_subdirectory(files)

# Algorithms and Data Structures
add_subdirectory(datetime)
add_subdirectory(random)
add_subdirectory(templates)
add_subdirectory(algorithm)
add_subdirectory(data_structures)
add_subdirectory(heterogeneous_types)

# Paradigms
add_subdirectory(paradigms)
add_subdirectory(parallel)

# Utilities
add_subdirectory(networking)
add_subdirectory(utilities)

# Interfaces
add_subdirectory(gui)

# Testing
add_subdirectory(tests)