add_executable(raw_arrays raw_arrays.cpp)

add_executable(arrays arrays.cpp)

add_executable(vectors vectors.cpp)

add_executable(strings strings.cpp)

add_executable(move move.cpp)

add_executable(aggregate_initialization aggregate_initialization.cpp)

add_executable(structured_binding structured_binding.cpp)
